syntax = "proto3";
import "message.proto";
package pb;

message SendMessageReq {
    string message_id = 1; //消息id
    ReceiverType receiver_type = 2; // 接收者类型，1：user;2:group
    int64 receiver_id = 3; // 用户id或者群组id
    repeated int64 to_user_ids = 4; // 需要@的用户id列表
    MessageBody message_body = 5; // 消息体
    int64 send_time = 6; // 消息发送时间戳，精确到毫秒
    bool is_persist = 7; // 是否将消息持久化到数据库
}
message SendMessageResp {

}
message RegisterDeviceReq {
    int64 app_id = 1; // app_id
    int32 type = 2; // 设备类型
    string brand = 3; // 厂商
    string model = 4; // 机型
    string system_version = 5; // 系统版本
    string sdk_version = 6; // sdk版本号
}
message RegisterDeviceResp {
    int64 device_id = 1; // 设备id
}
message User {
    int64 user_id = 1; // 用户id
    string nickname = 2; // 昵称
    int32 sex = 3; // 性别
    string avatar_url = 4; // 头像地址
    string extra = 5; // 附加字段
    int64 create_time = 6; // 创建时间
    int64 update_time = 7; // 更新时间
}

message AddUserReq {
    User user = 1; // 用户信息
}
message AddUserResp {
}

message GetUserReq {
    int64 user_id = 1; // 用户id
}
message GetUserResp {
    User user = 1; // 用户信息
}

service LoginClient {
    // 注册设备
    rpc RegisterDevice (RegisterDeviceReq) returns (RegisterDeviceResp);
    // 添加用户
    rpc AddUser (AddUserReq) returns (AddUserResp);
    // 获取用户信息
    rpc GetUser (GetUserReq) returns (GetUserResp);
    // 发送消息
    rpc SendMessage (SendMessageReq) returns (SendMessageResp);
}
